--- a/data-science.html
+++ b/data-science.html
@@ -91,7 +91,7 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/3FqijwXtN0/Data-Scientist'>Data Scientist - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/3FqijwXtN0/Data-Scientist'>Data Scientist - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -111,7 +111,7 @@
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://blackhorsesolutions.applytojob.com/apply/opfWZd4aX1/Data-Scientist'>Data Scientist - BlackHorse Solutions - Career Page</a></h5> 
+<h5><a href='http://blackhorsesolutions.applytojob.com/apply/opfWZd4aX1/Data-Scientist'>Data Scientist - BlackHorse Solutions - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -198,7 +198,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cardlytics/jobs/1933907'>Job Application for Data Scientist  at Cardlytics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cardlytics/jobs/1933907'>Job Application for Data Scientist  at Cardlytics</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -222,7 +222,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://uchicago.wd5.myworkdayjobs.com/en-US/External/job/5235-S-Harper-Court/Senior-Data-Scientist-2_JR06852'>Senior Data Scientist-2</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uchicago.wd5.myworkdayjobs.com/en-US/External/job/5235-S-Harper-Court/Senior-Data-Scientist-2_JR06852'>Senior Data Scientist-2</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 17, 2019 ... Conducts data investigation, including data wrangling, cleaning, sampling, 
 management, exploratory analysis, regression and classification, prediction, and 
@@ -251,7 +251,7 @@ and?...</p>
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698157428-lead-data-scientist-product-intelligence'>Omio Lead Data Scientist - Product Intelligence | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698157428-lead-data-scientist-product-intelligence'>Omio Lead Data Scientist - Product Intelligence | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -303,7 +303,7 @@ and?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://assembly.applytojob.com/app/share/1CurNTNQNx'>Data Scientist</a></h5> 
+<h5><a href='http://assembly.applytojob.com/app/share/1CurNTNQNx'>Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... Data Scientist. Los Angeles, CA; Full Time; Mid Level. Enter your name and email 
 to generate a unique referral link and receive credit for anyone who applies?...</p>
@@ -350,7 +350,7 @@ data processing workflows, using statistics and machine learning algorithms?...<
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corescientific/jobs/4277078002'>Job Application for Data Scientist at Core Scientific</a></h5> 
+<h5><a href='https://boards.greenhouse.io/corescientific/jobs/4277078002'>Job Application for Data Scientist at Core Scientific</a></h5> 
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -358,7 +358,7 @@ data processing workflows, using statistics and machine learning algorithms?...<
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://crisp.recruiterbox.com/jobs/fk03dbg/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisp.recruiterbox.com/jobs/fk03dbg/'>
     Data Scientist - [Remote] - [United States] - Graduate 2020 at Crisp Inc.
 </a></h5> 
 <p><span class="badge badge-light">United States United States</span></p>
@@ -438,11 +438,11 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://idalab.softgarden.io/job/5186447/Data-Scientist-m-f-d-?jobDbPVId=14205952&amp;l=en'>Data Scientist (m/f/d)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idalab.softgarden.io/job/5186447/Data-Scientist-m-f-d-?jobDbPVId=14205952&amp;l=en'>Data Scientist (m/f/d)</a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698100238-data-scientist-for-global-sportswear-brand'>Aroghia Group Data Scientist for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698100238-data-scientist-for-global-sportswear-brand'>Aroghia Group Data Scientist for Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -492,7 +492,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/commerceiq/job/okrpbfw5'>CommerceIQ Careers - Senior Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/commerceiq/job/okrpbfw5'>CommerceIQ Careers - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -500,7 +500,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Jersey-City/Merrill-Lynch-Wealth-Management-Data-Scientist---Jersey-City--NJ_19068542'>Merrill Lynch Wealth Management Data Scientist ? Jersey City, NJ</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Jersey-City/Merrill-Lynch-Wealth-Management-Data-Scientist---Jersey-City--NJ_19068542'>Merrill Lynch Wealth Management Data Scientist ? Jersey City, NJ</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... The Merrill Lynch Wealth Management (MLWM) Business Oversight and 
 Supervision Data Scientist Manager is responsible for coordinating efforts on the
